# airProxyPool

./: .env.example  AGENTS.md  Dockerfile  Dockerfile.glider  README.md  app.py  data.db  docker-compose.yml  main.sh  pyproject.toml  temp_test.py
features/proxy_pool/application/: orchestrator.py  ports.py  services.py  subscription_scheduler.py  subscription_service.py
features/proxy_pool/domain/: models.py  subscriptions.py
features/proxy_pool/infrastructure/: clash_parser.py  collector_runner.py  config_writer.py  db.py  forward_deduplicator.py  forward_tester.py  glider_publisher.py  glider_tunnel.py  health_service.py  healthcheck.py  orchestrator_factory.py  parser.py  redis_state.py  repository.py  settings.py  source_reader.py  subscription_fetcher.py  subscription_parsers.py  subscription_scheduler.py  tasks.py
features/proxy_pool/interface/: api.py
features/subscription_collector/data/: clash.yaml  coupons.txt  domains.txt  singbox.json  subscribes.txt  v2ray.txt  valid-domains.txt
scripts/: glider_entry.sh
tests/: test_api_smoke.py  test_proxy.py
